k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-node-app
  template:
    metadata:
      labels:
        app: devsu-node-app
    spec:
      containers:
        - name: app
          image: devsuacr.azurecr.io/devsu-node-app:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
