k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-node-service
spec:
  selector:
    app: devsu-node-app
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
